--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -36,7 +36,7 @@ jobs:
       id: prepare
       run: |
         echo ::set-output name=image_repo::${{ secrets.DOCKER_USERNAME }}/kube-controllers
-        echo ::set-output name=platforms::linux/amd64,linux/arm64,linux/ppc64le
+        echo ::set-output name=platforms::linux/amd64,linux/arm64
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
@@ -48,16 +48,14 @@ jobs:
         git config --local user.name Robot
         git config --local user.email Robot@users.noreply.github.com
         SYNC_VERSIONS=SYNC_VERSIONS.md
-        export DOCKER_CLI_EXPERIMENTAL=enabled
         for t in `git --git-dir ./sync_project/.git tag -l | grep "^v[0-9]*\.[0-9]*\.[0-9]*$"`
         do
           if [ -z "`cat ${SYNC_VERSIONS} | grep $t`" ]; then
             IMAGE_NAME=${{ steps.prepare.outputs.image_repo }}:$t
-            docker pull quay.io/calico/kube-controllers:$t-amd64
-            docker pull quay.io/calico/kube-controllers:$t-arm64
-            docker pull quay.io/calico/kube-controllers:$t-ppc64le
-            docker manifest create $IMAGE_NAME quay.io/calico/kube-controllers:$t-amd64 quay.io/calico/kube-controllers:$t-arm64 quay.io/calico/kube-controllers:$t-ppc64le
-            docker manifest push $IMAGE_NAME
+            docker buildx build . --platform ${{ steps.prepare.outputs.platforms }} \
+              -t ${IMAGE_NAME} \
+              --build-arg IMAGE_TAG=$t \
+              --push
             echo "* $t" >> ${SYNC_VERSIONS}
             git add ${SYNC_VERSIONS}
             git commit -m "buildx image ${IMAGE_NAME}"
